sg.tf
resource "aws_security_group" "allow_tls" {
name = "terraform-sg"
ingress {
  description = " allow port 22 - inbound"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}

ingress{
description =" " allow port 8080 - inbound"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  }

egress{
description = " outbound"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks = ["0.0.0.0/0"]
}

}
